<resources>
    <string name="app_name">carapp</string>
    <string name="close"> close menu</string>
    <string name="open"> open menu</string>
    <string name="sign_up">sign up</string>
    <string name="first_name">First Name</string>
    <string name="register">Register</string>
    <string name="last_name">Last Name</string>
    <string name="e_mail">E_mail</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
</resources>